tests/integration/targets/playbooks/provision_playbook/enterprise-example.com/platform/elastic-cloud/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: elastic-system
  namespace: elastic-system
  annotations:
    cert-manager.io/cluster-issuer: tavros
    kubernetes.io/ingress.class: prod
    konghq.com/strip-path: 'true'
    konghq.com/protocols: https
    konghq.com/https-redirect-status-code: '302'
spec:
  rules:
  - host: kibana.tavros.enterprise-example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana-kb-http
          servicePort: 5601
  tls:
  - hosts:
    - kibana.tavros.enterprise-example.com
    secretName: elastic-cloud-ingress-cert
